# spex-tools

./: .gitignore  README.md  Segmentation.ipynb  pyproject.toml  pytest.ini  setup.cfg  setup.py  upload_pip.py
spex/: __init__.py
spex/core/: utils.py
spex/core/clustering/: phenograph.py
spex/core/segmentation/: cellpose_cellseg.py  filters.py  io.py  postprocessing.py  watershed.py
spex/core/spatial_transcriptomics/: clq.py  clustering.py  differential_expression.py  preprocessing.py  reduce_dimensionality.py
tests/: test_clustering.py  test_core.py  test_segmentation.py  test_spatial_transcriptomics.py
